Fixes overflow issues on Edge and IE (#1753)
* Fixes overflow issues on Edge and IE

Fixes Viewer Standalone only via .desktop class overflow: hidden; in layout.less

--- a/js/styles/viewer/layout.less
+++ b/js/styles/viewer/layout.less
@@ -39,6 +39,8 @@ html, body, #viewer-app, #author-app {
   padding-left: @grid-gutter-width;
 }
 .desktop {
+  // this prevents extraneous scroll bars, specifically in ie11 and Edge
+  overflow: hidden;
   #viewer-app {
     background: @lawn-color;
   }
